examples/tests/semantic/fail/wrongFieldInitialization.tig
let 
    type error = int 
    type error_type = {error : error}
    var wrong_record_creation := error_type {error = "Swift"} 
in 
end
